# rara

./: .devkit.toml  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  404.html  AGENT.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  agent-tools.html  agent.html  api-guide.html  buf-integration.html  cliff.toml  clippy.toml  codex-oauth.html  config.ci.yaml  config.example.toml  config.example.yaml  configuration.html  context-folding.html  deny.toml  dock.html  docker-compose.agent.yml  docker-compose.yml  env.local.example  gateway.html  go.work  goal.md  harness-engineering.html  identity-system.html  index.html  init.sh  introduction.html  justfile  licenserc.toml  memory-system.html  (+36 more)
crates/agents/: AGENT.md  CHANGELOG.md  Cargo.toml  README.md
crates/agents/src/: err.rs  lib.rs  model.rs  provider.rs  runner.rs  tool_registry.rs
crates/ai/: Cargo.toml
crates/ai/src/: client.rs  error.rs  lib.rs  service.rs
crates/app/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/app/src/: boot.rs  config_sync.rs  context_mode.rs  feed_store.rs  flatten.rs  io_pipeline.rs  lib.rs  mita.rs  resolvers.rs  sandbox.rs  session_bridge.rs  settings.rs  vault_bootstrap.rs  vault_watcher.rs  web_server.rs
crates/app/tests/: anchor_checkout_e2e.rs  e2e_scripted.rs  list_sessions_rejects_unknown_status.rs  real_tape_flow.rs  run_code_session.rs
crates/boot/: Cargo.toml
crates/boot/src/: agentfs.rs  audit.rs  bus.rs  coding_task.rs  components.rs  composio.rs  error.rs  guard.rs  kernel.rs  lib.rs  llm_registry.rs  manifests.rs  memory.rs  outbox.rs  providers.rs  resolvers.rs  skills.rs  state.rs  tape_convert.rs  user_store.rs
crates/channels/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/channels/src/: lib.rs  terminal.rs  tool_display.rs  voice.rs  web.rs  web_reply_buffer.rs  web_session.rs  web_session_events.rs  web_topology.rs
crates/channels/tests/: web_buffer_e2e.rs  web_e2e.rs  web_session_smoke.rs  web_topology.rs  web_ws_drain.rs
crates/chat/: Cargo.toml
crates/chat/src/: agent.rs  error.rs  lib.rs  message_utils.rs  model_catalog.rs  service.rs  stream.rs
crates/cmd/: AGENT.md  CHANGELOG.md  Cargo.toml  build.rs
crates/cmd/src/: build_info.rs  debug.rs  main.rs  session_index.rs
crates/cmd/wix/: main.wxs
crates/common/base/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/common/crawl4ai/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/common/error/: AGENT.md  Cargo.toml
crates/job-model/: Cargo.toml
crates/job-model/migrations/: 20260208000000_domain_models.sql  20260211000000_drop_ai_run_prompt_template.sql  20260211000000_notify_priority.sql  20260211000001_scheduler_tables.sql  20260211130000_add_telegram_outbox.sql  20260212000003_resume_int_enums.sql  20260212000005_metrics_int_enums.sql
crates/job-model/src/: application.rs  interview.rs  lib.rs  metrics.rs  saved_job.rs
crates/jobspy-sys/: Cargo.toml  build.rs
crates/jobspy-sys/src/: lib.rs  setup.rs  types.rs
crates/kernel/: AGENT.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml
crates/kernel/src/: agent.rs  agent_loop.rs  agent_turn.rs  audit.rs  audit_subsystem.rs  auth.rs  cascade.rs  compaction.rs  context_budget.rs  create_plan_tool.rs  debug.rs  delivery.rs  device.rs  device_registry.rs  error.rs  event.rs  event_loop.rs  event_processor.rs  event_queue.rs  handle.rs  hooks.rs  identity.rs  io.rs  kernel.rs  kv.rs  lib.rs  lifecycle.rs  metrics.rs  model.rs  mood.rs  notification.rs  plan.rs  proactive.rs  schedule.rs  schedule_tool.rs  security.rs  sentence_buffer.rs  session.rs  session_title.rs  sharded_event_queue.rs  (+9 more)
crates/kernel/tests/: anchor_checkout_e2e.rs  context_compression_e2e.rs  e2e_contract_lane1_no_llm.rs  e2e_contract_lane2_scripted.rs  e2e_lifecycle.rs  guard_integration.rs  integration.rs  io_streaming.rs  session_index_tape_derived_e2e.rs  session_status_e2e.rs  subagent_topology_events.rs  tape_default_codec.rs  tape_metadata_back_compat.rs  task_report_test.rs  tool_call_across_turns_e2e.rs  tool_concurrency.rs  tool_validate.rs  user_message_appended_topology_event.rs  whitespace_intermediate_tape_e2e.rs
crates/memory/: Cargo.toml
crates/memory/src/: chroma.rs  chunker.rs  embedder.rs  error.rs  fusion.rs  hindsight_client.rs  kernel_impl.rs  lazy_client.rs  lib.rs  manager.rs  mem0_client.rs  memos_client.rs  pod_manager.rs  reranking.rs  search.rs  store.rs  store_pg.rs  store_sqlite.rs  types.rs
crates/memory/tests/: tap_memory.rs
crates/rara-acp/: AGENT.md  Cargo.toml  README.md
crates/rara-acp/src/: connection.rs  delegate.rs  error.rs  events.rs  lib.rs  registry.rs  thread.rs
crates/rara-acp/tests/: integration_test.rs
crates/rara-dock/: AGENT.md  Cargo.toml
crates/rara-dock/src/: error.rs  lib.rs  models.rs  routes.rs  state.rs  store.rs  tools.rs
crates/rara-model/: AGENT.md  CHANGELOG.md  Cargo.toml  diesel.toml
crates/rara-model/migrations/: 20260210000000_init.down.sql  20260210000000_init.sql  20260211000000_drop_ai_run_prompt_template.down.sql  20260211000001_saved_job.down.sql  20260211000001_saved_job.up.sql  20260211133000_drop_notification_log.down.sql  20260211133000_drop_notification_log.up.sql  20260212000000_saved_job_event.down.sql  20260212000000_saved_job_event.sql  20260213000000_chat_sessions_init.down.sql  20260213000000_chat_sessions_init.sql  20260213000000_chat_sessions_init.up.sql  20260214000000_resume_pdf_fields.down.sql  20260214000000_resume_pdf_fields.up.sql  20260214000001_typst_tables.down.sql  (+47 more)
crates/rara-sandbox/: AGENT.md  Cargo.toml
crates/rara-vault/: AGENT.md  Cargo.toml
crates/sandbox/: AGENT.md  Cargo.toml
crates/server/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/sessions/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/skills/: AGENT.md  CHANGELOG.md  Cargo.toml  README.md
crates/soul/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/symphony/: AGENT.md  CHANGELOG.md  Cargo.toml
crates/tape-codec-zig/: AGENT.md  CHANGELOG.md  Cargo.toml  build.rs
crates/telegram/: Cargo.toml
crates/telegram-bot/: Cargo.toml  README.md
crates/workers/: Cargo.toml
(+2096 files in other folders)
