[workspace.package]
version = "0.0.17"
edition = "2024"
license = "Apache-2.0"
authors = ["crrow"]
repository = "https://github.com/crrow/job"
homepage = "https://github.com/crrow/job"
readme = "README.md"
keywords = ["rust", "axum", "backend", "jobs", "automation"]
categories = ["web-programming"]

[workspace.lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"

[workspace]
resolver = "3"
members = [
    "api",
    "crates/app",
    "crates/cmd",
    "crates/common/base",
    "crates/common/error",
    "crates/common/runtime",
    "crates/common/telemetry",
    "crates/common/crawl4ai",
    "crates/common/object-store",
    "crates/common/worker",
    "crates/common/yunara-store",
    "crates/rara-model",
    "crates/domain/shared",
    "crates/domain/job",
    "crates/domain/resume",
    "crates/domain/application",
    "crates/domain/interview",
    "crates/domain/scheduler",
    "crates/domain/analytics",
    "crates/server",
    "crates/telegram-bot",
    "crates/paths",
    "crates/jobspy-sys",
    "crates/workers",
    "crates/agents",
    "crates/sessions",
    "crates/domain/chat",
    "crates/extensions/skill-admin",
    "crates/memory",
    "crates/skills",
    "crates/integrations/mcp",
    "crates/integrations/keyring-store",
    "crates/extensions/job-pipeline",
    "crates/extensions/mcp-admin",
    "crates/core/agent-core",
    "crates/core/rara-prompt",
    "crates/core/tool-core",
    "crates/integrations/composio",
    "crates/extensions/workspace",
    "crates/extensions/coding-task",
    "crates/extensions/dispatcher-admin",
    "crates/extensions/prompt-admin",
    "crates/extensions/rara-git",
    "crates/common/infisical",
]

[workspace.dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
axum = "^0.8"
axum-tracing-opentelemetry = "0.33.0"
backon = "^1.3"
base64 = "^0.22"
bon = "^3.6"
bytes = "^1.11"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
config = { version = "0.15", features = ["async"] }
croner = "3"
derive_more = { version = "2.0", features = ["full"] }
dirs = "^6"
futures = "^0.3"
http = "^1"
jiff = { version = "^0.2", features = ["serde"] }
lazy_static = "^1.4"
moka = { version = "0.12", features = ["future"] }
oauth2 = "5"
once_cell = "^1.20"
opendal = { version = "0.52", features = ["services-s3"] }
async-openai = { version = "0.33", features = ["chat-completion"] }
prometheus = "^0.14"
prost = "^0.14"
protobuf = "^3.7"
reqwest = { version = "^0.13", features = ["json", "stream"] }
rustix = "^1.1"
schemars = "^1.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9"
sha2 = "0.10"
shadow-rs = "1.2"
smart-default = "0.7"
snafu = "^0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "uuid"] }
strum = "^0.27"
strum_macros = "^0.27"
teloxide = { version = "^0.17", features = ["macros"] }
tokio = { version = "^1.45", features = ["full", "tracing"] }
tokio-util = "^0.7"
tonic = "^0.14"
tonic-build = "^0.14"
tonic-health = "^0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "^0.14"
tonic-tracing-opentelemetry = "0.32.0"
tonic-web = "^0.14"
tower = "^0.5"
tower-http = { version = "^0.6", features = ["cors", "timeout", "trace"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
ulid = "1"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
llmfit-core = { git = "https://github.com/AlexsJones/llmfit" }
validator = "^0.20"

# Testing
git2 = "0.20"
tempfile = "3"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }

# Internal workspace crates (use =version to keep in sync with workspace version)
base = { path = "crates/common/base" }
common-runtime = { path = "crates/common/runtime" }
common-telemetry = { path = "crates/common/telemetry" }
common-worker = { path = "crates/common/worker" }
crawl4ai = { path = "crates/common/crawl4ai" }
jobspy-sys = { path = "crates/jobspy-sys" }
object-store = { path = "crates/common/object-store" }
rara-agents = { path = "crates/agents" }
rara-api = { path = "api" }
rara-app = { path = "crates/app" }
rara-cli = { path = "crates/cmd" }
rara-composio = { path = "crates/integrations/composio" }
rara-dispatcher-admin = { path = "crates/extensions/dispatcher-admin" }
rara-domain-analytics = { path = "crates/domain/analytics" }
rara-domain-application = { path = "crates/domain/application" }
rara-domain-chat = { path = "crates/domain/chat" }
rara-domain-interview = { path = "crates/domain/interview" }
rara-domain-job = { path = "crates/domain/job" }
rara-domain-resume = { path = "crates/domain/resume" }
rara-domain-scheduler = { path = "crates/domain/scheduler" }
rara-domain-shared = { path = "crates/domain/shared" }
rara-error = { path = "crates/common/error" }
rara-infisical = { path = "crates/common/infisical" }
rara-git = { path = "crates/extensions/rara-git" }
rara-ext-job-pipeline = { path = "crates/extensions/job-pipeline" }
rara-keyring-store = { path = "crates/integrations/keyring-store" }
rara-mcp = { path = "crates/integrations/mcp" }
rara-mcp-admin = { path = "crates/extensions/mcp-admin" }
rara-memory = { path = "crates/memory" }
rara-model = { path = "crates/rara-model" }
rara-paths = { path = "crates/paths" }
rara-prompt = { path = "crates/core/rara-prompt" }
rara-prompt-admin = { path = "crates/extensions/prompt-admin" }
rara-server = { path = "crates/server" }
rara-sessions = { path = "crates/sessions" }
rara-skill-admin = { path = "crates/extensions/skill-admin" }
rara-skills = { path = "crates/skills" }
rara-telegram-bot = { path = "crates/telegram-bot" }
rara-workspace = { path = "crates/extensions/workspace" }
rara-coding-task = { path = "crates/extensions/coding-task" }
rara-workers = { path = "crates/workers" }
agent-core = { path = "crates/core/agent-core" }
tool-core = { path = "crates/core/tool-core" }
yunara-store = { path = "crates/common/yunara-store" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Use custom release notes generated by git-cliff
release-notes = "RELEASE_NOTES.md"
# Skip checking whether the specified configuration files are up to date
# (we use ubuntu-latest instead of ubuntu-20.04 which cargo-dist wants)
allow-dirty = ["ci"]
# A GitHub repo to push Homebrew formulas to
tap = "crrow/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Use appropriate runners for each target
[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-latest"
x86_64-unknown-linux-gnu = "ubuntu-latest"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
