[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["crrow"]
repository = "https://github.com/rararulab/rara"
homepage = "https://github.com/rararulab/rara"
readme = "README.md"
keywords = ["rust", "agent", "proactive", "developer-tools", "ai"]
categories = ["command-line-utilities"]
publish = false

[workspace.lints.rust]
unsafe_code = "deny"
rust_2024_compatibility = { level = "warn", priority = -1 }
dead_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"
cargo_common_metadata = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
missing_panics_doc = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
use_self = "allow"
needless_pass_by_value = "allow"
wildcard_imports = "allow"
or_fun_call = "allow"
option_if_let_else = "allow"
unused_async = "allow"
single_match_else = "allow"
map_unwrap_or = "allow"
from_over_into = "allow"
derivable_impls = "allow"
cast_lossless = "allow"
needless_raw_string_hashes = "allow"
similar_names = "allow"
iter_on_single_items = "allow"
collapsible_if = "allow"
result_large_err = "allow"
unreadable_literal = "allow"
trivially_copy_pass_by_ref = "allow"
manual_let_else = "allow"
clone_on_copy = "allow"
default_trait_access = "allow"
unused_self = "allow"
match_same_arms = "allow"
uninlined_format_args = "allow"
redundant_clone = "allow"
implicit_clone = "allow"
needless_continue = "allow"
format_push_string = "allow"
redundant_closure_for_method_calls = "allow"
used_underscore_binding = "allow"
manual_string_new = "allow"
new_without_default = "allow"
unnecessary_literal_bound = "allow"
unnecessary_wraps = "allow"
needless_collect = "allow"
derive_partial_eq_without_eq = "allow"
unnecessary_lazy_evaluations = "allow"
too_many_lines = "allow"
unnecessary_map_or = "allow"
too_long_first_doc_paragraph = "allow"
match_wildcard_for_single_variants = "allow"
assigning_clones = "allow"
large_futures = "allow"
manual_strip = "allow"
branches_sharing_code = "allow"
write_with_newline = "allow"
type_complexity = "allow"
ignored_unit_patterns = "allow"
cast_precision_loss = "allow"
manual_is_multiple_of = "allow"
stable_sort_primitive = "allow"
ref_option = "allow"
unnested_or_patterns = "allow"
needless_borrows_for_generic_args = "allow"
question_mark = "allow"
redundant_closure = "allow"
literal_string_with_formatting_args = "allow"
semicolon_if_nothing_returned = "allow"
float_cmp = "allow"
needless_update = "allow"
field_reassign_with_default = "allow"
option_option = "allow"
too_many_arguments = "allow"
needless_for_each = "allow"

[workspace]
resolver = "3"
members = [
    "api",
    "crates/app",
    "crates/cmd",
    "crates/common/base",
    "crates/common/error",
    "crates/common/runtime",
    "crates/common/telemetry",
    "crates/common/crawl4ai",
    "crates/common/worker",
    "crates/common/tool-macro",
    "crates/common/yunara-store",
    "crates/rara-model",
    "crates/domain/shared",
    "crates/server",
    "crates/paths",
    "crates/sessions",
    "crates/skills",
    "crates/integrations/mcp",
    "crates/integrations/codex-oauth",
    "crates/integrations/kimi-oauth",
    "crates/integrations/keyring-store",
    "crates/agents",
    "crates/channels",
    "crates/kernel",
    "crates/extensions/backend-admin",
    "crates/extensions/rara-git",
    "crates/soul",
    "crates/rara-sandbox",
    "crates/rara-acp",
    "crates/drivers/browser",
    "crates/drivers/stt",
    "crates/drivers/tts",
]

[workspace.dependencies]
anyhow = "^1.0"
argon2 = "0.5"
async-openai = { version = "0.33", features = ["chat-completion"] }
async-trait = "^0.1"
axum = "^0.8"
axum-tracing-opentelemetry = "0.33.0"
backon = "^1.3"
base64 = "^0.22"
bon = "^3.6"
bytes = "^1.11"
chromiumoxide = { version = "0.9", default-features = false }
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
config = { version = "0.15", features = ["yaml"] }
croner = "3"
crossbeam-queue = "0.3"
crossterm = "0.28"
derive_more = { version = "2.0", features = ["full"] }
diesel = { version = "2.3", features = ["sqlite", "chrono", "uuid", "serde_json", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.8", features = ["sqlite", "bb8"] }
diesel_migrations = { version = "2.3", features = ["sqlite"] }
dirs = "^6"
eventsource-stream = "0.2"
futures = "^0.3"
hex = "0.4"
hmac = "0.13"
http = "^1"
hyper = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
indexmap = "2"
jieba-rs = "0.9"
jiff = { version = "^0.2", features = ["serde"] }
jsonwebtoken = "9"
lazy_static = "^1.4"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "hostname",
] }
lineark-sdk = "2.0"
md5 = "0.7"
moka = { version = "0.12", features = ["future"] }
notify = "8"
oauth2 = "5"
once_cell = "^1.20"
open = "5"
opendal = { version = "0.52", features = ["services-fs", "services-memory"] }
parking_lot = "0.12"
prost = "^0.14"
protobuf = "^3.7"
pyroscope = "0.5"
pyroscope_pprofrs = "0.2"
rand = "0.10"
rapidfuzz = "0.5"
ratatui = { version = "0.29", features = ["crossterm"] }
regex = "1"
reqwest = { version = "^0.13", features = ["form", "json", "multipart", "stream"] }
rustix = "^1.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
schemars = "^1.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9"
sha2 = "0.11"
shadow-rs = "2.0"
smart-default = "0.7"
snafu = "^0.9"
strum = "^0.27"
strum_macros = "^0.27"
subtle = "2"
sysinfo = "0.38"
teloxide = { version = "^0.17", features = ["macros"] }
tokio = { version = "^1.45", features = ["full", "tracing"] }
tokio-util = "^0.7"
tonic = "^0.14"
tonic-build = "^0.14"
tonic-health = "^0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tonic-reflection = "^0.14"
tonic-tracing-opentelemetry = "0.32.0"
tonic-web = "^0.14"
tower = "^0.5"
tower-http = { version = "^0.6", features = ["cors", "timeout", "trace"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
ulid = "1"
unicode-normalization = "0.1"
url = "2"
urlencoding = "2"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
validator = "^0.20"

# Testing
git2 = "0.20"
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "k3s"] }

# Internal workspace crates (use =version to keep in sync with workspace version)
base = { path = "crates/common/base" }
common-runtime = { path = "crates/common/runtime" }
common-telemetry = { path = "crates/common/telemetry" }
common-worker = { path = "crates/common/worker" }
crawl4ai = { path = "crates/common/crawl4ai" }

rara-acp = { path = "crates/rara-acp" }
rara-agents = { path = "crates/agents" }
rara-api = { path = "api" }
rara-app = { path = "crates/app" }
rara-backend-admin = { path = "crates/extensions/backend-admin" }
rara-browser = { path = "crates/drivers/browser" }
rara-stt = { path = "crates/drivers/stt" }
rara-tts = { path = "crates/drivers/tts" }
rara-channels = { path = "crates/channels" }
rara-cli = { path = "crates/cmd" }
rara-codex-oauth = { path = "crates/integrations/codex-oauth" }
rara-kimi-oauth = { path = "crates/integrations/kimi-oauth" }
rara-domain-shared = { path = "crates/domain/shared" }
rara-error = { path = "crates/common/error" }
rara-git = { path = "crates/extensions/rara-git" }
rara-kernel = { path = "crates/kernel" }
rara-keyring-store = { path = "crates/integrations/keyring-store" }
rara-mcp = { path = "crates/integrations/mcp" }
rara-model = { path = "crates/rara-model" }
rara-paths = { path = "crates/paths" }
rara-server = { path = "crates/server" }
rara-sessions = { path = "crates/sessions" }
rara-skills = { path = "crates/skills" }
rara-soul = { path = "crates/soul" }
rara-sandbox = { path = "crates/rara-sandbox" }

# fff (Fast File Finder) — Cargo git dependencies (not vendored).
#
# Pinned to a specific rev because `Cargo.lock` is gitignored workspace-wide
# (see `.gitignore`); without the pin CI re-resolves to upstream HEAD on
# every run and a breaking change upstream (e.g. the `grep_search` visibility
# flip in Apr 2026) takes down every open PR at once. Bump the rev in a
# dedicated PR after updating `crates/app/src/tools/{fff_find,fff_grep}.rs`
# to the new upstream API.
fff-search = { git = "https://github.com/dmtrKovalenko/fff.nvim", rev = "ea1f9802d7879345f02bef72bcadecd7252b8add", features = ["zlob"] }
fff-grep = { git = "https://github.com/dmtrKovalenko/fff.nvim", rev = "ea1f9802d7879345f02bef72bcadecd7252b8add" }
fff-query-parser = { git = "https://github.com/dmtrKovalenko/fff.nvim", rev = "ea1f9802d7879345f02bef72bcadecd7252b8add", default-features = false }

# zlob is a transitive dep of fff-search (feature = "zlob"); declaring it here
# pins the version across the workspace because `Cargo.lock` is gitignored.
# 1.3.2 is the first zlob release targeting zig 0.16's `Build.Step.Compile`
# API (the `linkLibC()` method call was removed upstream); 1.3.0 only compiles
# on zig 0.15. Bump this in lockstep with the CI runner's zig toolchain.
zlob = "=1.3.2"

rara-tool-macro = { path = "crates/common/tool-macro" }
yunara-store = { path = "crates/common/yunara-store" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Skip checking whether the specified configuration files are up to date
# (we use ubuntu-latest instead of ubuntu-20.04 which cargo-dist wants)
allow-dirty = ["ci"]
# A GitHub repo to push Homebrew formulas to
tap = "rararulab/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Use self-hosted runners for each target
[workspace.metadata.dist.github-custom-runners]
global = "self-hosted"
aarch64-apple-darwin = "macos"
x86_64-unknown-linux-gnu = "linux"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
