[package]
name = "rara-agents"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
agent-core.workspace = true
async-openai.workspace = true
rara-domain-shared.workspace = true
rara-mcp.workspace = true
rara-memory.workspace = true
rara-paths.workspace = true
rara-sessions.workspace = true
rara-skills.workspace = true
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace"] }
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.32.0"

[lints]
workspace = true
