[package]
name = "rara-agents"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
agent-core.workspace = true
async-openai.workspace = true
async-trait.workspace = true
axum.workspace = true
bon.workspace = true
jiff.workspace = true
prometheus.workspace = true
rara-domain-shared.workspace = true
rara-mcp.workspace = true
rara-memory.workspace = true
rara-sessions.workspace = true
rara-skills.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true

[lints]
workspace = true
