[package]
name = "rara-agents"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Predefined agent registry: role-based lookup for built-in agent manifests"

[dependencies]
rara-kernel.workspace = true
serde_json.workspace = true

[lints]
workspace = true
