[package]
name = "rara-app"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application orchestration and lifecycle management for job"

[dependencies]
agentfs-sdk = { workspace = true }
anyhow.workspace = true
async-trait = { workspace = true }
axum = { workspace = true }
base = { workspace = true }
bon = { workspace = true }
chrono.workspace = true
common-runtime = { workspace = true }
common-worker = { workspace = true }
config = { workspace = true }
lettre.workspace = true
rand.workspace = true
rara-agents.workspace = true
rara-backend-admin = { workspace = true }
rara-channels = { workspace = true }
rara-codex-oauth = { workspace = true }
rara-composio.workspace = true
rara-domain-shared = { workspace = true }
rara-kernel = { workspace = true }
rara-keyring-store.workspace = true
rara-mcp.workspace = true
rara-paths = { workspace = true }
rara-pg-credential-store.workspace = true
rara-server = { workspace = true }
rara-sessions.workspace = true
rara-skills.workspace = true
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu = { workspace = true }
sqlx = { workspace = true }
teloxide = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid.workspace = true
yunara-store = { workspace = true }

[lints]
workspace = true
