[package]
name = "rara-app"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application orchestration and lifecycle management for rara"

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true }
axum = { workspace = true }
base = { workspace = true }
bon = { workspace = true }
chrono.workspace = true
common-runtime = { workspace = true }
common-telemetry = { workspace = true }
common-worker = { workspace = true }
config = { workspace = true }
futures.workspace = true
glob = "0.3.3"
globset = "0.4"
humantime = "2"
humantime-serde = "1"
ignore = "0.4"
jiff.workspace = true
lettre.workspace = true
notify = { workspace = true }
parking_lot.workspace = true
rand.workspace = true
rara-acp.workspace = true
rara-agents.workspace = true
rara-backend-admin = { workspace = true }
rara-browser = { workspace = true }
rara-channels = { workspace = true }
rara-codex-oauth = { workspace = true }
rara-kimi-oauth = { workspace = true }
rara-domain-shared = { workspace = true }
rara-kernel = { workspace = true }
rara-keyring-store.workspace = true
rara-mcp.workspace = true
rara-paths = { workspace = true }
rara-sandbox = { workspace = true }
dashmap = "6"
rara-server = { workspace = true }
rara-sessions.workspace = true
rara-stt = { workspace = true }
rara-tts = { workspace = true }
rara-skills.workspace = true
rara-soul.workspace = true
rara-tool-macro.workspace = true
fff-search = { workspace = true }
fff-query-parser = { workspace = true }
# Direct dep (not imported) to activate the workspace-level `=1.3.2` pin on
# this transitive; see the note in the workspace `[dependencies]`.
zlob = { workspace = true }
regex.workspace = true
reqwest = { workspace = true }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
snafu = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
rara-model = { workspace = true }
sysinfo.workspace = true
teloxide = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid.workspace = true
walkdir = "2.5.0"
yunara-store = { workspace = true }
similar = "3.1.0"

[dev-dependencies]
axum = { workspace = true }
rara-kernel = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
