[package]
name = "rara-boot"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Kernel bootstrap: manifests, skills, MCP, kernel construction"

[features]
default = []
k8s = ["rara-k8s"]

[dependencies]
agentfs-sdk = { workspace = true }
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
jiff.workspace = true
lettre.workspace = true
opendal.workspace = true
rand.workspace = true
rara-agents.workspace = true
rara-codex-oauth = { workspace = true }
rara-coding-task = { workspace = true }
rara-composio.workspace = true
rara-domain-shared.workspace = true
rara-k8s = { workspace = true, optional = true }
rara-kernel.workspace = true
rara-keyring-store.workspace = true
rara-mcp.workspace = true
rara-memory = { workspace = true }
rara-paths.workspace = true
rara-pg-credential-store.workspace = true
rara-queue.workspace = true
rara-sessions.workspace = true
rara-skills.workspace = true
rara-workspace = { workspace = true }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
