[package]
name = "rara-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart", "ws"] }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = "6"
futures = { workspace = true }
image = { workspace = true }
jiff = { workspace = true }
rand = { workspace = true }
rara-dock = { workspace = true }
rara-kernel = { workspace = true }
rara-mcp = { workspace = true }
rara-paths = { workspace = true }
regex = { workspace = true }
# teloxide 0.17 is pinned to reqwest 0.12; Proxy / ClientBuilder types must
# match, so we keep a renamed 0.12 dep for the telegram proxy builder.
# Upgrade to workspace reqwest (0.13) once teloxide supports it.
qrcode = "0.14"
regex-lite = "0.1"
reqwest = { workspace = true }
reqwest012 = { package = "reqwest", version = "0.12", features = ["socks"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true, features = ["derive"] }
teloxide = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
url = "2"
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
